components/container/Container.module.scss
@import "../../styles/mixins.scss";
@import "../../styles/variables.scss";

.pageContainer {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: $logo-color;
}

.contentContainer {
  width: 100%;
}

.heading {
  padding-top: $extra-large-padding;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0px;

  @include breakpoint("xlarge") {
    gap: 100px;
  }

  span {
    height: 3px;
    width: 50px;
    display: block;
    background-color: $logo-color;

    @include breakpoint("large") {
      width: 200px;
    }
  }

  h3 {
    font-size: $large-font;
    text-align: center;
    width: 70%;

    @include breakpoint("large") {
      width: auto;
    }
  }
}

